--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="#1487E3"
     tools:context=".MainActivity">
 
     <ImageView
@@ -21,7 +20,7 @@
         android:layout_margin="10dp"
         android:textAlignment="center"
         android:textStyle="bold"
-        android:textColor="#FFFFFF"
+        android:textColor="#009688"
         android:text="রবি সকল ইন্টারনেট ও মিনিট অফার"/>
 
 </LinearLayout>
