--- a/app/src/main/res/layout/activity_robi_minute_recharge.xml
+++ b/app/src/main/res/layout/activity_robi_minute_recharge.xml
@@ -38,9 +38,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                ads:adSize="SMART_BANNER"
+                ads:adSize="LARGE_BANNER"
                 android:layout_marginTop="3dp"
-                ads:adUnitId="@string/banner5">
+                ads:adUnitId="@string/banner6">
             </com.google.android.gms.ads.AdView>
 
 
