--- a/app/src/main/res/layout/activity_robi_internet_recharge.xml
+++ b/app/src/main/res/layout/activity_robi_internet_recharge.xml
@@ -24,6 +24,15 @@
                 android:textSize="18dp" />
 
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/load"
+                android:id="@+id/text2"
+                android:textColor="#E91E63"
+                android:textSize="18dp" />
+
+
             <com.google.android.gms.ads.AdView
                 xmlns:ads="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/adView2"
